--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,1 +1,4 @@
-{"CodeGPT.apiKey":"CodeGPT Plus Beta"}
+{
+    "github.copilot.selectedCompletionModel": "",
+    "CodeGPT.apiKey": "CodeGPT Plus"
+}
